# abrain

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  commands.sh  make_package_dot.sh  pyproject.toml  requirements.txt  setup.py  venv.sh
.github/workflows/: build_and_test.yml  deploy_wheels.yml
cpp/: config.cpp  config.h  genotype.h
cpp/misc/: constants_template.h  point.hpp
cpp/phenotype/: ann.h  cppn.cpp  cppn.h  eshn.cpp  eshn.h
doc/src/: conf.py  index.rst  misc.rst
doc/src/_autogen/: functions.rst
doc/src/_static/: custom.css
doc/src/api/: ann.rst  config.rst  cppn.rst  functions.rst  genome.rst  index.rst
doc/src/logo/: logo.tex
doc/src/usage/: basics.rst  evolution.rst  index.rst
doc/src/usage/advanced/: cppn.rst  mutations.rst
examples/: basics.py  common.py  evolution.py  leap-evolution.py  qdpy-evolution.py
misc/: local_ann_stats.py
ps/: plotter.sh
pybind/: config.cpp  genotype.cpp  module.cpp  module.h
pybind/phenotype/: ann.cpp  cppn.cpp
python/core/: ann.py  config.py  genome.py
python/tests/: conftest.py  test_ann.py  test_config.py  test_cppn.py  test_genome.py  test_gvc.py  test_pybind11.py
src/abrain/: __init__.py
src/abrain/_bindings/: config.cpp  genotype.cpp  innovations.cpp  module.cpp  utils.hpp
src/abrain/_bindings/phenotype/: ann.cpp  cppn.cpp
src/abrain/_cpp/: config.cpp  config.h  genotype.h  innovations.cpp  innovations.h
src/abrain/_cpp/misc/: constants_template.h  point.hpp  utils.hpp
src/abrain/_cpp/phenotype/: ann.cpp  ann.h  cppn.cpp  cppn.h  eshn.cpp  eshn.h
src/abrain/_python/: _evolvable_substrate.py  _functions.py  ann.py  config.py  cppn.py  point.py
src/abrain/core/: ann.py  config.py  cppn.py  genome.py
src/abrain/core/functions/: plotter.sh  template.tex
src/abrain/neat/: evolver.py
src/pyne/_bindings/: config.cpp  genotype.cpp  module.cpp
src/pyne/_bindings/phenotype/: ann.cpp  cppn.cpp
src/pyne/_cpp/misc/: constants.h
src/pyne/_cpp/phenotype/: ann.cpp  ann.h  cppn.cpp  cppn.h
src/pyne/core/: ann.py  config.py  genome.py
src/pyne/core/functions/: abs.eps  bsgm.eps  gaus.eps  id.eps  sin.eps  ssgm.eps  step.eps
tests/: _utils.py  conftest.py  test_ann.py  test_config.py  test_cppn.py  test_evolution.py  test_examples.py  test_genome.py  test_innovations.py  test_neat.py
