[project]
name = "abrain"
version = "1.0rc-post5"
authors = [{ name="Kevin Godin-Dubois", email="k.j.m.godin-dubois@vu.nl"}]
description = "NeuroEvolution in Python backed by C++ computations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  
  "License :: OSI Approved :: MIT License",

  "Operating System :: Unix",

  "Intended Audience :: Science/Research", 
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
  "plotly",
  "importlib_resources",
  "graphviz",
  "pyrecord",
]

[project.urls]
Homepage = "https://github.com/kgd-al/abrain"
Documentation = "https://abrain.rtfd.io"
"Bug Tracker" = "https://github.com/kgd-al/abrain/issues"

[build-system]
requires = [
  "setuptools>=65.0",
  "cmake>=3.12",
  "pybind11",
  "pybind11-stubgen",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-steps", "pytest-sugar",
  "coverage",
  "flake8",
]

docs = [
  "sphinx",
  "sphinx-pyproject",   # Auto-extract project version
  "sphinx_design",      # for the nice flowing cards
  "matplotlib",         # for the plot extension
  "sphinx-copybutton",  # Easily copy code
  "myst-parser",        # Better parser
  "furo"                # Style

]

kaleido = [ "kaleido" ]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
